<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tvGameNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_1"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/gilroyetrabold"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/tvDateAndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" 15th March 2:00 pm"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@id/tvGameNo"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/gilroysemibold"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tvGameNo"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/gilroyetrabold"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Vani"
        android:layout_marginTop="15dp"
     app:layout_constraintTop_toBottomOf="@id/tvDateAndTime"
        app:layout_constraintStart_toEndOf="@id/txtName"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/gilroysemibold"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/txtQuestion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_is_the_best_cricketer_in_the_world"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/txtName"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/gilroyetrabold"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/txtAns1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/txtQuestion1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/gilroyetrabold"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/tvAns1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Vani"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/txtQuestion1"
        app:layout_constraintStart_toEndOf="@id/txtName"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/gilroysemibold"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/txtQuestion2"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/what_are_the_colors_in_the_indian_national"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/txtAns1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/gilroyetrabold"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/txtAns2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/txtQuestion2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/gilroyetrabold"
        android:textSize="18sp"
        />
    <TextView
        android:id="@+id/tvAns2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Vani"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/txtQuestion2"
        app:layout_constraintStart_toEndOf="@id/txtName"
        android:layout_marginLeft="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/gilroysemibold"
        android:textSize="18sp"
        />


    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/tvAns2"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/yellow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>