<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SummaryActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="40dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/verticalGuidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="40dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontalGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />



        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/textView1"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroyetrabold"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/textView1"
            app:layout_constraintStart_toEndOf="@id/txtName"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroysemibold"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/here_are_the_answers_selected"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/txtName"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline"
            app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroyetrabold"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/txtQuestion1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/who_is_the_best_cricketer_in_the_world"
            app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroyetrabold"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/txtAns1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/txtQuestion1"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroyetrabold"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/tvAns1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/txtQuestion1"
            app:layout_constraintStart_toEndOf="@id/txtAns1"
            app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroysemibold"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/txtQuestion2"
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
            android:layout_height="wrap_content"
            android:text="@string/what_are_the_colors_in_the_indian_national"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/txtAns1"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline"

            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroyetrabold"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/txtAns2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/txtQuestion2"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroyetrabold"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/tvAns2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/txtQuestion2"
            app:layout_constraintStart_toEndOf="@id/txtAns2"
            app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
            android:layout_marginLeft="15dp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroysemibold"
            android:textSize="18sp"
            />




        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline"
            app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
            android:text="@string/summary"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroyetrabold"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/rvSummary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textView1"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline"
            app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
            tools:itemCount="2"
            tools:listitem="@layout/item_summary"

            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btFinish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvAns2"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            app:layout_constraintStart_toStartOf="@id/verticalGuideline"
            app:layout_constraintWidth_percent="0.4"
            android:background="@drawable/yellow_bg"
            app:layout_constraintEnd_toStartOf="@id/btHistory"
            android:text="@string/finish"
            android:paddingHorizontal="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroyetrabold" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btHistory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvAns2"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/btFinish"
            app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEnd"
            app:layout_constraintWidth_percent="0.4"
            android:layout_marginLeft="5dp"
            android:background="@drawable/yellow_bg"
            android:text="@string/history"
            android:paddingHorizontal="15dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroyetrabold" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>